--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,65 @@
 <head>
   <title>Smart School Online Gateway</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: url("https://th.bing.com/th/id/OIP.R1IgK6odpS18WEiNUFsqlQHaE7?w=267&h=180&c=7&r=0&o=7&pid=1.7&rm=3") no-repeat center center fixed;
+      background-size: cover;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 40px;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
+    }
+    .title {
+      color: #ff6600;
+      margin-bottom: 10px;
+    }
+    .subtitle {
+      font-size: 14px;
+      margin-bottom: 20px;
+      color: #333;
+    }
+    .card h2 {
+      margin-bottom: 15px;
+      color: #ff6600;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: #ff6600;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    button:hover {
+      background: #e65c00;
+    }
+    .switch {
+      margin-top: 10px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
