--- a/public/index.html
+++ b/public/index.html
@@ -63,16 +63,17 @@
     }
   </style>
 </head>
+<!-- index.html -->
 <body>
   <div class="container">
-    <h1 class="title">Smart School Online Gateway</h1>
+    <h1 class="title">William V. S. Tubman University Smart School Online Complaint Hub</h1>
     <p class="subtitle">
-      Smart school online gateway is a comprehensive online system for all current students of the Willian V.S. Tubman University.
+      William V. S. Tubman University Smart School is a comprehensive online system for all students of the William V. S. Tubman University.
     </p>
     <div class="card">
       <h2>Login</h2>
       <form id="loginForm">
-        <input type="text" id="studentId" placeholder="Student ID" required />
+        <input type="text" id="username" placeholder="Username" required />
         <input type="password" id="password" placeholder="Password" required />
         <button type="submit">Login</button>
       </form>
@@ -81,4 +82,5 @@
   </div>
   <script src="login.js"></script>
 </body>
+
 </html>
