--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Admin Portal</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
       border-radius: 12px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    h1 {
+    h1, h2 {
       text-align: center;
       color: #ff6600;
     }
@@ -38,16 +38,12 @@
       text-align: center;
       font-weight: bold;
     }
-    .total { background-color: #ff6600; }
+    .total { background-color: #00f7ffff; }
     .solved { background-color: #28a745; }
     .pending { background-color: #d9534f; }
     .card h2 {
       margin: 0;
       font-size: 24px;
-    }
-    .card p {
-      margin: 5px 0 0 0;
-      font-size: 16px;
     }
     table {
       width: 100%;
@@ -82,11 +78,45 @@
       display: inline-block;
       padding-bottom: 5px;
     }
+    .hidden { display: none; }
+    .login-box {
+      max-width: 400px;
+      margin: 80px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .login-box input {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Admin Dashboard</h1>
+  <!-- Login Screen -->
+  <div id="loginScreen" class="login-box">
+    <h1>Admin Login</h1>
+    <input type="text" id="adminUsername" placeholder="Username" required>
+    <input type="password" id="adminPassword" placeholder="Password" required>
+    <button onclick="adminLogin()">Login</button>
+  </div>
+
+  <!-- Dashboard -->
+  <div id="dashboard" class="container hidden">
+    <div class="topbar">
+      <h1>Admin Dashboard</h1>
+      <button onclick="adminLogout()">Logout</button>
+    </div>
 
     <!-- Summary Cards -->
     <div class="cards">
@@ -120,8 +150,8 @@
     <table id="complaintsTable">
       <thead>
         <tr>
-          <th>Student ID</th>
-          <th>Department</th>
+          <th>Student</th>
+          <th>College</th>
           <th>Message</th>
           <th>Status</th>
           <th>Date</th>
@@ -136,17 +166,53 @@
     <table id="usersTable">
       <thead>
         <tr>
-          <th>Student ID</th>
+          <th>Username</th>
           <th>Registered Date</th>
         </tr>
       </thead>
       <tbody id="usersList"></tbody>
     </table>
+
+    <!-- Add Admin Section -->
+    <h2 class="section-title">Add New Admin</h2>
+    <form id="addAdminForm">
+      <input type="text" id="newAdminUsername" placeholder="New Admin Username" required>
+      <input type="password" id="newAdminPassword" placeholder="New Admin Password" required>
+      <button type="submit">Add Admin</button>
+    </form>
   </div>
 
   <script>
     let allComplaints = [];
 
+    // ================= Login / Logout =================
+    async function adminLogin() {
+      const username = document.getElementById("adminUsername").value;
+      const password = document.getElementById("adminPassword").value;
+
+      const res = await fetch("/api/admin/login", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username, password })
+      });
+
+      if (res.ok) {
+        document.getElementById("loginScreen").classList.add("hidden");
+        document.getElementById("dashboard").classList.remove("hidden");
+        loadComplaints();
+        loadUsers();
+      } else {
+        alert("Invalid admin credentials");
+      }
+    }
+
+    async function adminLogout() {
+      await fetch("/api/admin/logout", { method: "POST" });
+      document.getElementById("dashboard").classList.add("hidden");
+      document.getElementById("loginScreen").classList.remove("hidden");
+    }
+
+    // ================= Complaints =================
     async function loadComplaints() {
       try {
         const res = await fetch('/api/complaints');
@@ -171,15 +237,21 @@
     function renderComplaints(complaints) {
       const list = document.getElementById("complaintsList");
       list.innerHTML = "";
-      complaints.reverse().forEach(c => {
+      complaints.forEach(c => {
+        const date = c.createdAt ? new Date(c.createdAt).toLocaleString() : "N/A";
         const row = document.createElement("tr");
         row.innerHTML = `
           <td>${c.username}</td>
-          <td>${c.college}</td>
+          <td>${c.college || "N/A"}</td>
           <td>${c.message.substring(0, 30)}... <button onclick="alert('${c.message}')">Read More</button></td>
           <td>${c.status}</td>
-          <td>${new Date(c.createdAt).toLocaleString()}</td>
-          <td>${c.status === "Pending" ? `<button onclick="markSolved('${c._id}')">Mark Solved</button>` : "—"}</td>
+          <td>${date}</td>
+          <td>
+            ${c.status === "Pending" 
+              ? `<button onclick="markSolved('${c._id}')">Mark Solved</button>` 
+              : ""}
+            <button onclick="deleteComplaint('${c._id}')">Delete</button>
+          </td>
         `;
         list.appendChild(row);
       });
@@ -193,9 +265,9 @@
     function searchComplaints() {
       const term = document.getElementById("searchInput").value.toLowerCase();
       const filtered = allComplaints.filter(c =>
-        c.studentId.toLowerCase().includes(term) ||
-        c.department.toLowerCase().includes(term) ||
-        c.message.toLowerCase().includes(term)
+        (c.username && c.username.toLowerCase().includes(term)) ||
+        (c.college && c.college.toLowerCase().includes(term)) ||
+        (c.message && c.message.toLowerCase().includes(term))
       );
       renderComplaints(filtered);
     }
@@ -205,19 +277,24 @@
       loadComplaints();
     }
 
-    // Load users
+    async function deleteComplaint(id) {
+      if (confirm("Are you sure you want to delete this complaint?")) {
+        await fetch(`/api/complaints/${id}`, { method: "DELETE" });
+        loadComplaints();
+      }
+    }
+
+    // ================= Users =================
     async function loadUsers() {
       try {
         const res = await fetch('/api/users');
         const users = await res.json();
         const list = document.getElementById("usersList");
         list.innerHTML = "";
-        users.reverse().forEach(u => {
+        users.forEach(u => {
+          const date = u.createdAt ? new Date(u.createdAt).toLocaleString() : "N/A";
           const row = document.createElement("tr");
-          row.innerHTML = `
-            <td>${u.studentId}</td>
-            <td>${new Date(u.createdAt).toLocaleString()}</td>
-          `;
+          row.innerHTML = `<td>${u.username}</td><td>${date}</td>`;
           list.appendChild(row);
         });
       } catch (err) {
@@ -225,9 +302,26 @@
       }
     }
 
-    // Load data on page load
-    loadComplaints();
-    loadUsers();
+    // ================= Add Admin =================
+    document.getElementById("addAdminForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const username = document.getElementById("newAdminUsername").value;
+      const password = document.getElementById("newAdminPassword").value;
+
+      const res = await fetch("/api/admin/register", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username, password })
+      });
+
+      if (res.ok) {
+        alert("New admin added successfully!");
+        document.getElementById("addAdminForm").reset();
+      } else {
+        const data = await res.json();
+        alert("Error: " + data.error);
+      }
+    });
   </script>
 </body>
 </html>
