--- a/public/index.html
+++ b/public/index.html
@@ -66,9 +66,9 @@
 <!-- index.html -->
 <body>
   <div class="container">
-    <h1 class="title">William V. S. Tubman University Smart School Online Complaint Hub</h1>
+    <h1 class="title">Online Complaint Hub</h1>
     <p class="subtitle">
-      William V. S. Tubman University Smart School is a comprehensive online system for all students of the William V. S. Tubman University.
+    Online Complaint Hub is a comprehensive online system for all students.
     </p>
     <div class="card">
       <h2>Login</h2>
