--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
         <button type="submit">Login</button>
       </form>
       <p class="switch">Don't have an account? <a href="register.html">Register here</a></p>
+  <p class="switch"><a href="forgot-password.html">Forgot Password?</a></p>
     </div>
   </div>
   <script src="login.js"></script>
