--- a/public/register.html
+++ b/public/register.html
@@ -8,9 +8,14 @@
   <div class="container">
     <h1>Register</h1>
     <form id="registerForm">
-      <input type="text" id="studentId" placeholder="Student ID" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit">Register</button>
+  <input type="text" id="firstName" placeholder="First Name" required />
+  <input type="text" id="middleName" placeholder="Middle Name" required />
+  <input type="text" id="lastName" placeholder="Last Name" required />
+  <input type="text" id="username" placeholder="Username" required />
+  <input type="text" id="department" placeholder="Department (from database)" required />
+  <input type="password" id="password" placeholder="Password" required />
+  <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
+  <button type="submit">Register</button>
     </form>
     <p>Already have an account? <a href="index.html">Login here</a></p>
   </div>
